--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <nav class="globa;Nav"></nav><a href="https://www.mercari.com/jp/items/m22600757875/"><li>885系　車端部機器　トイレタンク　3個入り(KATO)</li></a><nav>
       <img src="ing/883.jpg" alt="817KATO" width="=1" height="400">
     <nav class="globalNav"><a href="https://www.mercari.com/jp/items/m47780055836/"><li>883系　車端部機器　トイレタンク　3個入り(KATO)</li></a></nav>
-    <nav class="globalNav"><a href="https://www.mercari.com/jp/items/m72492745152/"><li>817系　車端部機器　トイレタンク　3個入り　TNカプラー対応　(TOMIX)</li></a></nav>
+    <img src="ing/817.jpg" alt="" width="300" height="400">
+    <nav class="globalNav"><a href="https://www.mercari.com/jp/items/m72492745152/"><li>817系　車端部機器　トイレタンク　2個入り　TNカプラー対応　(TOMIX)</li></a></nav>
   
   <nav class="globalNav"><a href="https://karatsukko.github.io/HEYANONAKAKOBO/">戻る</a></nav>
   
